<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reset_valigetta_btn"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_bt_valigia"
        android:text="@string/btn_avvia_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btn_apri_sensore"
        android:text="@string/btn_attiva_sensore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/sensore_rilevato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/valigia_sensore_non_rilevato"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <FrameLayout
        android:id="@+id/frame_sensore"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/valiga_conferma_misura_fatta"
        android:id="@+id/prova_misura_fatta"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>